--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>my first repository</h1>
     <p>changes done successfully</p>
+    <p>changes done successfully</p>
+    <p>changes done successfully</p>
 </body>
 </html>
